kubernetes/apps/monitor/loki/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "loki.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/app: "loki"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "loki"
    gethomepage.dev/description: "A"
    gethomepage.dev/href: "https://loki.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "sh-loki.png"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`loki.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: loki
          port: 80
          # sticky:
          #   cookie:
          #     httpOnly: true
          #     secure: true
          #     sameSite: none
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
